--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "config": "^3.3.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13"
+    "lodash": "^4.17.21",
+    "mongoose": "^6.0.13",
+    "neo4j-driver": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
